--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <DOCTYPE! html>
   <html>
   <link type="text/css" rel="stylesheet" href="stylesheet.css" />
+  <head>
+    <style>
+      #logo{
+      margin:auto;
+      position:absolute
+      }
+      </style>
+  </head>
   <div id="logo"> <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" /> </div>
   <form>
   <input type="text" name"search" />
